Fixed z-index of burger menu

--- a/css/main.css
+++ b/css/main.css
@@ -189,6 +189,7 @@ br {
     transition: 0.3s;
     box-shadow:
             0 10px 27px rgba(0, 0, 0, 0.05);
+    z-index: 10;
   }
 
   .burger-bar {
